--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>누구나 북스</title>
 </head>
 <body>
@@ -17,10 +18,13 @@
   <p>
     누구나 북스는 인문학과 IT 교육서를 출판합니다.</br>
   </p>
+  <p style="color: blue">
+     정식 홈페이지는 2019.1.1일 오픈합니다.
+  </p> 
   <hr>
   <p>
     사업자 등록번호 : 355-91-00913
-    <img src="./images/nuguna_corp.png"></img>
+    <img src="./images/nuguna_logo.png"></img>
   </p>
 </body>
 </html>
